--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     console:
       enabled: true
   jpa:
+    defer-datasource-initialization: true
     show-sql: true
     properties:
       hibernate:
