--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -11,21 +11,21 @@ on:
       - main
       - develop
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout source
+      - uses: actions/checkout@v3
 
-      steps:
-        - uses: actions/checkout@v3
+      - name: JDK 11설정
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
 
-        - name: JDK 11설정
-          uses: actions/setup-java@v3
-          with:
-            java-version: '11'
-            distribution: 'adopt'
-
-        - name: Gradle 의존성 캐시
-          uses: actions/cache@v3
+      - name: Gradle 의존성 캐싱
+        uses: actions/cache@v3
         with:
           path: |
             ~/.gradle/caches
@@ -34,20 +34,20 @@ on:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-        - name: Gradlew 권한 설정
-          run: chmod +x ./gradlew
+      - name: Gradlew 권한 설정
+        run: chmod +x ./gradlew
 
-        - name: Gradle build 진행
-          run: ./gradlew build
+      - name: Gradle build 진행
+        run: ./gradlew build
 
-        - name: 테스트 결과를 코멘트 등록
-          uses: EnricoMi/publish-unit-test-result-action@v2
-          if: always()
-          with:
-            files: '**/build/test-results/**/*.xml'
+      - name: 테스트 결과를 코멘트 등록
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: '**/build/test-results/**/*.xml'
 
-        - name: 테스트 실패 코멘트 등록
-          uses: mikepenz/action-junit-report@v3
-          if: always()
-          with:
-            report_paths: '**/build/test-results/test/TEST-*.xml'
+      - name: 테스트 실패 코멘트 등록
+        uses: mikepenz/action-junit-report@v3
+        if: always()
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
