--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout source
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: JDK 11설정
         uses: actions/setup-java@v3
