fix: 잘못설정된 flow 수정 (#23)

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Gradlew 권한 설정
         run: chmod +x ./gradlew
 
-      - name: Gradle build 진행
-        run: ./gradlew build
+      - name: 테스트 진행
+        run: ./gradlew test
 
       - name: 테스트 결과를 코멘트 등록
         uses: EnricoMi/publish-unit-test-result-action@v2
