--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -11,6 +11,10 @@ on:
       - main
       - develop
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,7 +46,7 @@ jobs:
 
       - name: 테스트 결과를 코멘트 등록
         uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
+        if: ${{ always() }}
         with:
           files: '**/build/test-results/**/*.xml'
 
