--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -6,6 +6,10 @@ on:
       - main
       - develop
 
+  pull_request:
+    branches:
+      - develop
+
 jobs:
   docker-build:
     runs-on: ubuntu-latest
@@ -26,7 +30,7 @@ jobs:
         run: ./gradlew bootJar
 
       - name: Docker Hub 로그인
-        run: docker/login-action@v2
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
