feat: git submodule 적용 (#29)

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: 저장소 chekcout
         uses: actions/checkout@v3
+        with:
+          submodules: true
+          token: ${{ secrets.SUBMODULE_TOKEN }}
 
       - name: JDK 11 설정
         uses: actions/setup-java@v3
