--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: checkout source
         uses: actions/checkout@v3
+          with:
+            submodules: true
+            token: ${{ secrets.SUBMODULE_TOKEN }}
 
       - name: JDK 11설정
         uses: actions/setup-java@v3
