--- a/.gitignore
+++ b/.gitignore
@@ -175,4 +175,6 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+###Git submodule
+src/main/resources/application.yml
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,macos
