fix: q타입 올라가지 않도록 gitignore 추가 (#54)

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,6 @@ gradle-app.setting
 ###Git submodule
 src/main/resources/application.yml
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,macos
+
+##query dsl
+**/generated
