--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -29,6 +29,11 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Start Redis
+          uses: supercharge/redis-github-action@1.1.0
+          with:
+            redis-version: 6
+
       - name: Gradle 의존성 캐싱
         uses: actions/cache@v3
         with:
