--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -29,11 +29,11 @@ jobs:
       - name: checkout source
         uses: actions/checkout@v3
 
-      - name: JDK 11설정
+      - name: JDK 17설정
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Gradle 의존성 캐싱
         uses: actions/cache@v3
