chore: payment 설정 추가 (#83)

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  payment:
+    secret-key: test_gsk_docs_OaPz8L5KdmQXkzRz3y47BMw6
+    base-url: https://api.tosspayments.com/v1/payments
+    confirm-endpoint: /confirm
   redis:
     host: localhost
     port: 6379
