--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -65,6 +65,7 @@ jobs:
           port: ${{ secrets.GCP_PORT }}
 
           script: |
+            echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
             sudo docker pull alswns7984/doridos:latest
             sudo docker stop backend || true
             sudo docker run -d -p 8080:8080 \
